Fix Update Health Check, Update Blood Unit and refactor SwaggerUI
